src/assets/scss/partials/_home.scss: Fix home text to not require auto overflow

--- a/src/assets/scss/partials/_home.scss
+++ b/src/assets/scss/partials/_home.scss
@@ -35,7 +35,6 @@
   padding-bottom: 10px;
 
   white-space: nowrap;
-  overflow: hidden;
 }
 
 .home-text-small {
